@@ -102,4 +102,10 @@
   <description>How many rows in the right-most join operand Hive should buffer before emitting the join result. </description>
 </property>
 
+<property>
+  <name>hive.exec.script.maxerrsize</name>
+  <value>100000</value>
+  <description>Maximum number of bytes a script is allowed to emit to standard error (per map-reduce task). This prevents runaway scripts from filling logs partitions to capacity </description>
+</property>
+
 </configuration>
